<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Radio FM AM Pro</string>
    <string name="RateRadioFMAM">Rate Radio FM AM Pro</string>
    <string name="choosefilemanager">Select a file manager Then GO to : Download/Radio FM AM Pro</string>
    <string name="IfyouenjoyusingRadioFMAM">If you enjoy using Radio FM AM Pro, please take a moment to rate it. Thanks for your support!</string>
    <string name="recordmessage">Some devices wont allow to directly access record folder so you have to Select a file manager and go to this address  : Download/Radio FM AM Pro </string>
    <string name="app_version_settings">Version : 0.1.05</string>
    <string name="more_application">Découvrez nos applications</string>
    <string name="title_activity_radios">RadiosActivity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="Search">Search Stations</string>
    <string name="Search_list">Search List</string>
    <string name="Search_radio">Search Radio</string>
    <string name="Search_favorite">Search Favorite</string>
    <string name="Reset">Reset</string>
    <string name="Start">Start</string>
    <string name="Start_alarm">Start Alarm</string>
    <string name="cancel_alarm">Cancel Current Alarm</string>
    <string name="Set_Alarm_at">Set Alarm at :</string>
    <string name="Set_Alarm">Set Alarm</string>
    <string name="Deleted_All">Favorite Radio deleted</string>
    <string name="Cant_beEmpty">Field can\'t be empty!</string>
    <string name="Radio_is_off">Radio is off. You can\'t set timer!</string>
    <string name="Radio_will_be_off">Radio will be off in :</string>
    <string name="minutes">minutes</string>
    <string name="EnterPosiv_nbr">Please enter a positive number</string>
    <string name="not_vaid_search">Short String</string>
    <string name="Favoris">Favorites</string>
    <string name="shutdown">Stop playing after : </string>
    <string name="fab_content_desc">Add custom stream.</string>
    <string name="appversion">Version : 2.4.3</string>
    <string name="version">2.4.3</string>
    <string name="filemanagernotfound">Did not find any activity capable of opening files.</string>
    <string name="non">No</string>
    <string name="oui">Yes</string>
    <string name="Exit">Exit</string>
    <string name="Close">Close</string>
    <string name="Déconnecter">Disconnect</string>
    <string name="Déconnectersuccess">Successfully Disconnected.</string>
    <string name="connectionsuccess">Successfully Connected.</string>
    <string name="Connecter">Connect</string>
    <string name="deleteaccount">Delete my account</string>
    <string name="Échec_connexion">Login Failed !</string>
    <string name="SyncFav">Synchronize favorites between devices</string>
    <string name="GO">GO</string>
    <string name="addname">Add stream name*</string>
    <string name="addhomepageurl">Add homepage URL</string>
    <string name="addstreamurl">Add stream URL*</string>
    <string name="addcountry">Add country name</string>
    <string name="addbitrate">Add bitrate</string>
    <string name="addtags">Add tags</string>
    <string name="addlanguage">Add language</string>
    <string name="addimageurl">Add image url</string>
    <string name="enternumber">Enter a number!</string>
    <string name="enteremail">Enter Email</string>
    <string name="enterpassword">Enter your password</string>
    <string name="click_to_expand">Click/Drag to expand </string>
    <string name="playernullinfo">Click here to copy/search </string>
    <string name="BUFFERING">BUFFERING</string>
    <string name="OoOps_Try_another_station">OoOps! Try another station!</string>
    <string name="verify_connection">Verify your connection !</string>
    <string name="Data">Data</string>
    <string name="MB">MB</string>
    <string name="Timer">Timer</string>
    <string name="Minute">Minute</string>
    <string name="empty_fav">Your favoritess radio will appear here</string>
    <string name="emptu_record">Your recordings will appear here</string>
    <string name="RemindMeLater">Remind Me Later</string>
    <string name="NoThanks">No, Thanks</string>
    <string name="RateImage">RateImage</string>
    <string name="search_hint">Search radio Here</string>
    <string name="deletesall">Delete favorite </string>
    <string name="setting">Setting </string>
    <string name="deleteallfav">Do you really want to delete all favorite?</string>
    <string name="deleteallrecording">Do you really want to delete all recordings?</string>
    <string name="deleterecording">Do you really want to delete this recording?</string>
    <string name="DisconnectMsg">Do you really want to Disconnect?</string>
    <string name="deleteuserMSG">Do you really want to Delete user profile?</string>
    <string name="disclaimermessage">This app is a tool for playing online radio. It is not affiliated with any media or radio. We respect the copyright of the owner. Therefore, please do not use illegale content without the permission of the owner. </string>
    <string name="licenses">Licences</string>
    <string name="evaluez_application">Évaluez l\'application</string>
    <string name="Qu_est_ce_que_application">C\'est quoi "Prix en Tunisie" ?</string>
    <string name="Nous_Contacter">Nous Contacter</string>
    <string name="batterieoptimisationmessage">If you experience playback interruptions you have to disable battery optimization. Click on "GO" to open setting and search for this app. (there is some brand that require additional settings)  </string>
    <string name="batterieoptimisationmessages">If you experience playback interruptions you have to disable battery optimization. Click on "GO" to open setting and search for this app. (there is some brand that require additional settings) </string>
    <string name="batterieoptimisationmessageson">You have already disabled battery optimization. If you still experience playback interruptions please check you have an internet connection (please note that there is some brand that require additional settings)</string>
    <string name="nobatterieoptimisationmessageso">You don\'t need battery optimization. </string>
    <string name="discaimertitle">Disclaimer </string>
    <string name="Keep_in_mind">Keep in mind </string>
    <string name="choose_countrie">Choose countrie </string>
    <string name="choose_server">Choose server </string>
    <string name="choose_theme">Choose theme </string>
    <string name="defaultCountry">Default Countrie : %s</string>
    <string name="currentserver">Server : %s</string>
    <string name="Theme">Theme</string>
    <string name="batterisetting">Battery optimisation</string>
    <string name="infoRadioname">Radio Name : %s</string>
    <string name="infoHomepage">Homepage : %s</string>
    <string name="infoRadiostreamURL">Radio Stream URL : %s</string>
    <string name="infoCountry">Country : %s</string>
    <string name="infoState">State : %s</string>
    <string name="infoLanguage">Language : %s</string>
    <string name="infoBitrate">Bitrate : %s Kbps</string>
    <string name="infoTags">Tags : %s</string>
    <string name="inforecord">Info : %s</string>
    <string name="radioAlarmIsSetAT"> Alarm is set at : %s  \n %s : %s</string>
    <string name="RadioStationName">Radio Station Name</string>
    <string name="RecordedStationName">Recorded Stream Name</string>
    <string name="statNbrStation">Stations : %s</string>
    <string name="statNbrStationBroken">Stations Broken : %s</string>
    <string name="statNbrLanguage">Languages : %s</string>
    <string name="statNbrCountries">Countries : %s</string>
    <string name="statNbrTags">Tags : %s</string>
    <string name="stationinfo">%s  %s %s</string>
    <string name="sucssessDeleteUser">User Deleted successfully</string>
    <string name="sucssessDeleteRecord">%s  Deleted successfully</string>
    <string name="errorDeleteRecord">%s  Not Deleted successfully</string>
    <string name="Pop">pop</string>
    <string name="Hits">hits</string>
    <string name="Rock">rock</string>
    <string name="Electronic">electronic</string>
    <string name="Reggae">reggae</string>
    <string name="Inspirational">inspirational</string>
    <string name="International">international</string>
    <string name="Latin">latin</string>
    <string name="Country">country</string>
    <string name="News">news</string>
    <string name="languages">languages</string>
    <string name="stations">stations</string>
    <string name="states">states</string>
    <string name="codecs">codecs</string>
    <string name="tags">tags</string>
    <string name="topvote">topvote</string>
    <string name="topclick">topclick</string>
    <string name="Dark">Dark</string>
    <string name="Light">Light</string>
    <string name="setbysystem">Set by system</string>
    <string name="countries">countries</string>
    <string name="No_Homepage">No homepage URL!</string>
    <string name="Select_radio_toshare">Select a Radio Station to share!</string>
    <string name="radio_toshare">Share</string>
    <string name="radio_visithomepage">Website</string>
    <string name="radio_like">Like</string>
    <string name="radio_dislike">Dislike</string>
    <string name="go_recordFiles">Recordings</string>
    <string name="Countries">Countries</string>
    <string name="Languages">Languages</string>
    <string name="States">States</string>
    <string name="Codecs">Codecs</string>
    <string name="Tags">Tags</string>
    <string name="Radio">Radio</string>
    <string name="Topvote">Top Vote</string>
    <string name="Topclick">Top Click</string>
    <string name="Recordings">Recordings</string>
    <string name="recents">Recents</string>
    <string name="recentlyplayed">Recently Played</string>
    <string name="Remove_ads">Remove ads</string>
    <string name="More_apps">More Apps</string>
    <string name="Rcorded_Radio">Recorded files</string>
    <string name="Rate_Us">Rate this app</string>
    <string name="Choose_Emailclient">Choose an Email client :</string>
    <string name="Settings">Settings</string>
    <string name="Pause">Pause</string>
    <string name="playpause">Play / Pause</string>
    <string name="hint">Enter your default countrie</string>
    <string name="nav_header_title">Radio FM AM Pro</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ad_attribution">Ad</string>
    <string name="Statistics">Statistics</string>
    <string name="Contact_us">Contact us</string>
    <string name="Licences">Licences</string>
    <string name="Disclaimer">Disclaimer</string>
    <string name="Enable_Load_radio_images">Enable Load radio images</string>
    <string name="Disable_Load_radio_images">Disable Load radio images</string>
    <string name="cantadddownloedwhenrecord">You can\'t add download while recording a stream!</string>
    <string name="cantrecordwhendownload">You can\'t record a stream while downloading!</string>
    <string name="cantRecordArecordedStream">You can\'t record a recorded stream!</string>
    <string name="VideoRecordNotAvailable">Video record is not available.</string>
    <string name="Record_folder_empty">Record folder empty</string>
    <string name="StreamInfoCopied">Stream Info Copied</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="Permissionsgranted">Permissions granted</string>
    <string name="PermissionsNotgranted">Permissions not granted</string>
    <string name="http">http</string>
    <string name="https">https</string>
    <string name="interstial_tappx">pub-74759-android-5515</string>
    <string name="interstial_adUnitId">ca-app-pub-5900899997553420/6682173162</string>
    <string name="add">Add</string>
</resources>