<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerSetting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.SettingFragment">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="9dp"
        android:orientation="vertical">




        <ProgressBar
            android:id="@+id/spin_kitSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/indeterminate_progress"
            android:visibility="gone" />

        <TextView
            android:id="@+id/signin_out_itxVw"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="9dp"
            android:foregroundGravity="center_vertical"

            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"

            android:text="@string/Connecter"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_signin" />


        <TextView
            android:id="@+id/delete_account_txVw"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="9dp"
            android:foregroundGravity="center_vertical"

            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"

            android:text="@string/deleteaccount"
            android:textSize="18sp"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_user_delete" />


        <TextView
            android:id="@+id/sync_fav_txVw"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="9dp"
            android:foregroundGravity="center_vertical"

            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"

            android:text="@string/SyncFav"
            android:textSize="18sp"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_sync" />

        <TextView
            android:id="@+id/fav_country_txv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="9dp"
            android:foregroundGravity="center_vertical"

            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:text="@string/defaultCountry"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_location" />


        <TextView
            android:id="@+id/radio_servers_txv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="9dp"
            android:foregroundGravity="center_vertical"

            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            android:textStyle="italic"
            app:drawableStartCompat="@drawable/ic_servers" />


        <TextView
            android:id="@+id/batterisettings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="9dp"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/batterisetting"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_battery" />


        <TextView
            android:id="@+id/themeTxvw"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/Theme"
            android:textSize="16sp"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/save_data"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="9dp"

            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/Enable_Load_radio_images"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_media" />

        <TextView
            android:id="@+id/StaticsTxV"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="9dp"

            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/Statistics"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_stats" />

        <TextView
            android:id="@+id/removeadsTxvw"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/Remove_ads"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_shop" />


        <TextView
            android:id="@+id/rateTxvw"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/Rate_Us"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_thumb_up" />

        <TextView
            android:id="@+id/moreappsTxvw"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/More_apps"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_shop_24" />


        <TextView
            android:id="@+id/Contact_usTxV"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="9dp"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/Contact_us"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_email" />

        <TextView
            android:id="@+id/LicencesTxtV"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="9dp"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/Licences"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_licensing" />

        <TextView
            android:id="@+id/DisclaimerTxtV"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="9dp"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/Disclaimer"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_disclaimer" />


        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:text="@string/appversion"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>