<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containeraddoDialogue"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="false"
    android:orientation="vertical"
    android:padding="6dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedscrollviewaddoDialogue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fillViewport="true"
        android:orientation="vertical"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Radio_nameTXviewadd_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_weight="1"
                android:hint="@string/addname"

                android:theme="@style/TextInputLayoutAppearance"
                app:endIconMode="clear_text"
              >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Radio_nameTXviewadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Radio_StreamlinkTXviewadd_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_weight="1"
                android:hint="@string/addstreamurl"
                android:theme="@style/TextInputLayoutAppearance"
                app:endIconMode="clear_text"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Radio_StreamlinkTXviewadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Radio_HomepageTXviewadd_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_weight="1"
                android:hint="@string/addhomepageurl"
                android:theme="@style/TextInputLayoutAppearance"
                app:endIconMode="clear_text"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Radio_HomepageTXviewadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Radio_imagelinkTXviewadd_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_weight="1"
                android:hint="@string/addimageurl"
                android:theme="@style/TextInputLayoutAppearance"
                app:endIconMode="clear_text"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Radio_imagelinkTXviewadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Radio_CountryTXviewadd_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_weight="1"
                android:hint="@string/addcountry"
                android:theme="@style/TextInputLayoutAppearance"
                app:endIconMode="clear_text"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Radio_CountryTXviewadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Radio_LanguageTXviewadd_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_weight="1"
                android:hint="@string/addlanguage"
                app:endIconMode="clear_text"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Radio_LanguageTXviewadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Radio_BitrateTXviewadd_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_weight="1"
                android:hint="@string/addbitrate"
                android:theme="@style/TextInputLayoutAppearance"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Radio_BitrateTXviewadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Radio_TagsTXviewadd_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_weight="1"
                android:hint="@string/addtags"
                android:theme="@style/TextInputLayoutAppearance"
                app:endIconMode="clear_text"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Radio_TagsTXviewadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/add_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerInsetStart="16dp"
                app:dividerInsetEnd="16dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_btn"
                style="@style/Widget.Material3.Button.ElevatedButton"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="9dp"

                android:foregroundGravity="center_horizontal"

                android:gravity="center"
                android:text="@string/add"
                android:textSize="12sp" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>



</RelativeLayout>
